[package]
name = "radio_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"]}
crossterm = "0.25"

rusqlite = { version = "0.29.0", features = ["bundled"] }
platform-dirs = "0.3.0"

ureq = "2.1"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

unicode-width = "0.1.5"
bitflags = "2.3.3"

thiserror = "1.0"